Comentando a senha de acesso ao banco de dados

--- a/Web.config
+++ b/Web.config
@@ -23,8 +23,8 @@
     <sessionState timeout="1"/>
   </system.web>
   <connectionStrings>
-    <add name="dboportunidadesBH" connectionString="Data Source=.;Initial Catalog=gestaodetalento;Persist Security Info=True;User ID=sa;Password=HOTaaoo00cli" providerName="System.Data.SqlClient"/>
-    <add name="dboportunidadesBH_MSDB" connectionString="Persist Security Info=False;Data Source=.;Initial Catalog=msdb;User Id=sa;Password=HOTaaoo00cli" providerName="System.Data.SqlClient"/>
+    <add name="dboportunidadesBH" connectionString="Data Source=.;Initial Catalog=gestaodetalento;Persist Security Info=True;User ID=sa;Password=*************" providerName="System.Data.SqlClient"/>
+    <add name="dboportunidadesBH_MSDB" connectionString="Persist Security Info=False;Data Source=.;Initial Catalog=msdb;User Id=sa;Password=*************" providerName="System.Data.SqlClient"/>
   </connectionStrings>
   <location path="_candidato">
     <system.web>
